Implement customer requirements, contractor leads, and portfolio management